--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "socket.io": "^2.3.0",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@types/express": "^4.17.7",
     "@types/mysql": "^2.15.15",
     "@types/node": "^14.0.27",
+    "@types/socket.io": "^2.1.11",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
