--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.27.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.11",
     "socket.io": "^2.3.0",
     "typeorm": "^0.2.25"
   },
@@ -23,6 +25,7 @@
     "@types/express": "^4.17.7",
     "@types/mysql": "^2.15.15",
     "@types/node": "^14.0.27",
+    "@types/nodemailer": "^6.4.0",
     "@types/socket.io": "^2.1.11",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
