--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.11",
     "socket.io": "^2.3.0",
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.4",
     "@types/mysql": "^2.15.15",
     "@types/node": "^14.0.27",
     "@types/nodemailer": "^6.4.0",
